# dir-explorer

./: Cargo.toml  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: dir.rs  main.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx  mockData.ts  types.ts
frontend/src/lib/: http.ts
src/: config.rs  dir.rs  main.rs
static/: site.css
templates/: base.html  home.html
