[package]
name = "dir-web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
askama = { version = "0.14.0" }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
serde = { version = "1.0.219", features = ["derive"] }
confy = "1.0.0"
